--- a/_config.yml
+++ b/_config.yml
@@ -12,14 +12,13 @@ picture: assets/images/profile.jpg
 
 resume: false
 resume-external: false
-resume-url: https://www.linkedin.com//in/mathieumailhos
+resume-url: https://www.linkedin.com/in/mathieumailhos
 
 url: https://mathieu.mailhos.io
-
 permalink: /:title/
 
 # To enable google analytics, supply your token below
-# analytics-google: 'UA-MYANALYTICS'
+analytics-google: 'UA-101179353-1'
 
 # To enable piwik tracking, supply your url & site ID below
 # analytics-piwik-url: 'piwik.my-host.com'
