remove link to about page

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: Mathieu Mailhos
-bio: Software Engineer, Cloud & Ops enthusiast, always looking for the best project and passionate of windsurf
+bio: Software Engineer
 
 # twitter summary info
 description: A blog about technology and stuff related
@@ -78,7 +78,7 @@ width: normal
 projects: false
 
 # if you don't need "about" or "blog", comment them out below
-about: true
+about: false
 blog: false
 
 # do you want to show the "read time" of the posts?
